--- a/public/styles/news-ad.css
+++ b/public/styles/news-ad.css
@@ -5,7 +5,7 @@
     align-items: center;
     gap: var(--spacing-32);
     padding: var(--spacing-48);
-    border: var(--border);
+    border-top: var(--border);
     @media (min-width: 800px) { 
         flex-direction: row;     
     }
